--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -63,7 +63,7 @@
         app:layout_constraintTop_toBottomOf="@+id/top_nav_layout"
         android:background="#343434"/>
 
-    <androidx.fragment.app.FragmentContainerView
+    <fragment
         android:id="@+id/dashboardHostFragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
@@ -78,6 +78,8 @@
         android:id="@+id/view2"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
         android:background="#343434"/>
 
@@ -86,6 +88,7 @@
         android:id="@+id/bottom_nav"
         android:layout_height="wrap_content"
         android:background="@color/background"
+        app:labelVisibilityMode="unlabeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/bottom_nav"
