--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -5,29 +5,25 @@
     <item android:title="home"
         android:icon="@drawable/home_icon"
         android:iconTint="@color/white"
-        app:labelVisibilityMode="unlabeled"
-        android:id="@+id/nav_home"/>
+        android:id="@+id/homeFragment"/>
 
     <item android:title="home"
         android:icon="@drawable/community_icon"
         android:iconTint="@color/white"
         app:labelVisibilityMode="unlabeled"
-        android:id="@+id/nav_community"/>
+        android:id="@+id/communityFragment"/>
     <item android:title="home"
         android:icon="@drawable/add_post_icon"
         android:iconTint="@color/white"
-        app:labelVisibilityMode="unlabeled"
-        android:id="@+id/nav_post"/>
+        android:id="@+id/addPostFragment"/>
 
     <item android:title="home"
         android:icon="@drawable/notification_icon"
         android:iconTint="@color/white"
-        app:labelVisibilityMode="unlabeled"
-        android:id="@+id/nav_notifications"/>
+        android:id="@+id/notificationsFragment"/>
 
     <item android:title="home"
         android:icon="@drawable/account_circle"
         android:iconTint="@color/white"
-        app:labelVisibilityMode="unlabeled"
-        android:id="@+id/nav_profile"/>
+        android:id="@+id/profileFragment"/>
 </menu>
