--- a/app/src/main/res/navigation/dashboard_graph.xml
+++ b/app/src/main/res/navigation/dashboard_graph.xml
@@ -7,7 +7,11 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.collegeconnected.fragments.dashboard.HomeFragment"
-        android:label="HomeFragment" />
+        android:label="HomeFragment" >
+        <action
+            android:id="@+id/action_homeFragment_to_communityFragment"
+            app:destination="@id/communityFragment" />
+    </fragment>
     <fragment
         android:id="@+id/communityFragment"
         android:name="com.example.collegeconnected.fragments.dashboard.CommunityFragment"
