--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -1,6 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="10dp"
     android:layout_height="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <EditText
+        android:id="@+id/postTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Title"
+        android:textColorHint="#767676"
+        android:textSize="25sp"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:textColor="@color/white"/>
+
+    <EditText
+        android:id="@+id/postDescription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Description"
+        android:textColorHint="#767676"
+        android:textSize="20sp"
+        android:layout_below="@+id/postTitle"
+        android:fontFamily="sans-serif"
+        android:textColor="@color/white"/>
+
+    <ImageView
+        android:id="@+id/postImage"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/demo_image"
+        android:layout_alignParentBottom="true"/>
+
+    <TextView
+        android:id="@+id/uploadPost"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Post"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/btn_background"
+        android:paddingLeft="10dp"
+        android:paddingEnd="10dp"
+        android:textColor="@color/white"
+        style="@style/h2"/>
+
+    <com.makeramen.roundedimageview.RoundedImageView
+        android:id="@+id/showPostImg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        app:riv_corner_radius="30dp"
+        android:layout_below="@+id/postDescription"
+        android:layout_above="@+id/postImage"
+        android:layout_marginTop="10dp"/>
+
+
+</RelativeLayout>
