--- a/app/src/main/res/layout/post_card.xml
+++ b/app/src/main/res/layout/post_card.xml
@@ -40,6 +40,16 @@
             android:textColor="#5F5F5F" />
     </RelativeLayout>
 
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Post Title"
+        android:textSize="20sp"
+        android:textColor="@color/white"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:padding="5dp"/>
+
     <ImageView
         android:id="@+id/userPostImage"
         android:layout_width="match_parent"
